[package]
name = "percepter"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = { version = "0.4.42", features = ["serde"] }
clap = { version = "4.5.53", features = ["derive"] }
uuid = { version = "1.19.0", features = ["serde", "v4"] }
linux-embedded-hal = "0.4.1"
bme280 = "0.5.1"
serde = { version = "1.0.228", features = ["derive"] }
